# server/docs/swagger.json
@@ -57,9 +57,8 @@
                     }
                 }
             }
-<<<<<<< HEAD
         },
-        "/memory": {
+        "/mem": {
             "get": {
                 "description": "Retrieves memory status data based on the specified interval and limit.",
                 "consumes": [
@@ -107,8 +106,6 @@
                     }
                 }
             }
-=======
->>>>>>> 97e9e548f2ce395e9ae5a36f2f4c41359c1607b7
         }
     },
     "definitions": {
@@ -125,19 +122,12 @@
             "type": "object",
             "properties": {
                 "code": {
-<<<<<<< HEAD
                     "type": "integer",
                     "example": 200
                 },
                 "message": {
                     "type": "string",
                     "example": "OK"
-=======
-                    "type": "integer"
-                },
-                "message": {
-                    "type": "string"
->>>>>>> 97e9e548f2ce395e9ae5a36f2f4c41359c1607b7
                 }
             }
         }
